bhushan: changes with backend

--- a/gold-admin-frontend/src/app/views/pages/lead-management/add-lead/add-lead.component.html
+++ b/gold-admin-frontend/src/app/views/pages/lead-management/add-lead/add-lead.component.html
@@ -174,7 +174,7 @@
                                     <option [disabled]="true" [selected]="true" value=""> Select Internal Branch
                                     </option>
                                     <option *ngFor="let branch of branches" [value]="branch.id">
-                                        {{branch.name}}
+                                        {{branch.name | titlecase}}
                                     </option>
                                 </select>
                                 <mat-error
