--- a/gold-admin-frontend/src/app/views/pages/loan-settings/add-scheme/add-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-settings/add-scheme/add-scheme.component.html
@@ -38,7 +38,7 @@
                                 <div class="col-6 amount">
                                     <input type="number" class="form-control" formControlName="schemeAmountEnd"
                                         [class.isError]="billingForm.get('schemeAmountEnd').touched && billingForm.get('schemeAmountEnd').invalid"
-                                        placeholder="From e.g 2,00,000">
+                                        placeholder="To e.g 2,00,000">
                                 </div>
                             </div>
                         </div>
