--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-address/user-address.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-address/user-address.component.html
@@ -22,6 +22,23 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="col-6 kt-margin-t-20">
+                        <div class="row">
+                            <div class="col-3 offset-1 p-0">
+                                <label class="mandatory font-weight-500 text-color">Unique Identity No.</label>
+                            </div>
+                            <div class="col-7">
+                                <input formControlName="identityProofNumber" type="text" aria-label="Pin Code"
+                                    placeholder="Unique Identity Number" class="form-control"
+                                    [class.isError]="controls.identityProofNumber.touched && controls.identityProofNumber.invalid">
+                                <mat-error
+                                    *ngIf="controls.identityProofNumber.errors?.required && controls.identityProofNumber.touched">
+                                    Required field
+                                </mat-error>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- <div class="col-6 kt-margin-t-20">
@@ -127,13 +144,27 @@
             </div> -->
 
                 <div class="row">
-                    <div class=" offset-6 kt-padding-l-25" style="position: relative; left: 35px;">
-                        <div class="">
+                    <div class="offset-6">
+                        <!-- <div class="">
                             <label class="custom-checkbox ">
                                 <span class="label-checkbox">Residential Same as Permanent</span>
                                 <input type="checkbox" class="" (change)="sameAddress($event.target.checked)">
                                 <span class="checkmark top-0"></span>
                             </label>
+                        </div> -->
+                    </div>
+
+                    <div class="col">
+                        <div class="row">
+                            <div class="offset-1 col">
+                                <!-- <mat-checkbox (change)="sameAddress($event.target.checked)">Residential Same as
+                                    Permanent</mat-checkbox> -->
+                                <label class="custom-checkbox ">
+                                    <span class="label-checkbox">Residential Same as Permanent</span>
+                                    <input type="checkbox" class="" (change)="sameAddress($event.target.checked)">
+                                    <span class="checkmark top-0"></span>
+                                </label>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -338,6 +369,24 @@
                                     </div>
                                 </div>
 
+                                <div class="kt-margin-t-20">
+                                    <div class="row">
+                                        <div class="col-3 offset-1 p-0">
+                                            <label class="mandatory font-weight-500 text-color">Unique Identity
+                                                No.</label>
+                                        </div>
+                                        <div class="col-7">
+                                            <input formControlName="addressProofNumber" type="text"
+                                                placeholder="Unique Identity Number" class="form-control"
+                                                [class.isError]="addressForm.controls.addressProofNumber.touched && addressForm.controls.addressProofNumber.invalid">
+                                            <mat-error
+                                                *ngIf="addressForm.controls.addressProofNumber.errors?.required && addressForm.controls.addressProofNumber.touched">
+                                                Required field
+                                            </mat-error>
+                                        </div>
+                                    </div>
+                                </div>
+
                                 <div>
                                     <div class=" kt-margin-t-20">
                                         <div class="row">
@@ -393,12 +442,14 @@
                                 <div class=" kt-margin-t-20 kt-margin-b-20">
                                     <div class="row">
                                         <div class="col">
-                                            <div class="img-container" *ngIf="(i==0 && images.residential.length== 0)">
+                                            <div class="offset-4 img-container"
+                                                *ngIf="(i==0 && images.residential.length== 0)">
                                                 <img class="placeholder-image"
                                                     src="../../../../../../assets/media/icons/image-placeholder.png"
                                                     alt="placeholder">
                                             </div>
-                                            <div class="img-container" *ngIf="(i==1 && images.permanent.length==0)">
+                                            <div class="offset-4 img-container"
+                                                *ngIf="(i==1 && images.permanent.length==0)">
                                                 <img class="placeholder-image"
                                                     src="../../../../../../assets/media/icons/image-placeholder.png"
                                                     alt="placeholder">
