--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-address/user-address.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-address/user-address.component.html
@@ -83,14 +83,21 @@
                 </div>
 
                 <div class="row kt-margin-t-20 kt-margin-b-20">
-                    <div class="col-6">
-                        <div class="col-8 offset-4">
-                            <div class="img-container">
-                                <img class="placeholder-image"
-                                    src="../../../../../../assets/media/icons/image-placeholder.png" alt="placeholder"
-                                    *ngIf="images.identityProof.length==0">
-                                <img class="border-rad-15 fetched-image" [src]="images.identityProof[0]" alt=""
-                                    *ngIf="images.identityProof.length>0">
+                    <div class="offset-2 col">
+                        <div *ngIf="images.identityProof.length==0" class="img-container">
+                            <img class="placeholder-image"
+                                src="../../../../../../assets/media/icons/image-placeholder.png" alt="placeholder">
+                        </div>
+                        <div *ngIf="images.identityProof.length>0">
+                            <div class="row ">
+                                <div class="kt-margin-r-15" *ngFor="let img of images.identityProof, index as idx">
+                                    <div class="img-container">
+                                        <img class="border-rad-15 fetched-image" [src]="img" alt="">
+                                        <img src="../../../../../assets/media/icons/cancel.svg" alt=""
+                                            class="kt-pointer remove-icon"
+                                            (click)="removeImages(idx, 'identityProof');">
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -457,9 +464,13 @@
 
                                             <div *ngIf="i==0 && images.residential.length > 0">
                                                 <div class="row">
-                                                    <div class="col-6" *ngFor="let img of images.residential">
+                                                    <div class="col-6"
+                                                        *ngFor="let img of images.residential, index as idx">
                                                         <div class="img-container">
                                                             <img class="fetched-image" [src]="img" alt="">
+                                                            <img src="../../../../../assets/media/icons/cancel.svg"
+                                                                alt="" class="kt-pointer remove-icon"
+                                                                (click)="removeImages(idx, 'residential');">
                                                         </div>
                                                     </div>
                                                 </div>
@@ -467,9 +478,13 @@
 
                                             <div *ngIf="i==1 && images.permanent.length > 0">
                                                 <div class="row">
-                                                    <div class="col-6" *ngFor="let img of images.permanent">
+                                                    <div class="col-6"
+                                                        *ngFor="let img of images.permanent, index as idx">
                                                         <div class="img-container">
                                                             <img class="fetched-image" [src]="img" alt="">
+                                                            <img src="../../../../../assets/media/icons/cancel.svg"
+                                                                alt="" class="kt-pointer remove-icon"
+                                                                (click)="removeImages(idx, 'permanent');">
                                                         </div>
                                                     </div>
                                                 </div>
