--- a/gold-admin-frontend/src/app/views/pages/lead-management/add-lead/add-lead.component.html
+++ b/gold-admin-frontend/src/app/views/pages/lead-management/add-lead/add-lead.component.html
@@ -135,8 +135,9 @@
                             <div class="col-5">
                                 <!-- <mat-form-field appearance="outline" class="w-100"> -->
                                 <input [readOnly]="viewOnly" class="form-control" formControlName="panCardNumber"
-                                    autocomplete="off" placeholder="PAN Number" maxlength="10"
-                                    [class.isError]="controls.panCardNumber.touched && controls.panCardNumber.invalid">
+                                    autocomplete="off" placeholder="PAN" maxlength="10"
+                                    [class.isError]="controls.panCardNumber.touched && controls.panCardNumber.invalid"
+                                    style="text-transform: uppercase;">
                                 <!-- <mat-error
                                         *ngIf="controls.panCardNumber.errors?.required && controls.panCardNumber.touched">
                                         Required field
