--- a/gold-admin-frontend/src/app/views/pages/loan-settings/loan-scheme/loan-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-settings/loan-scheme/loan-scheme.component.html
@@ -15,7 +15,12 @@
 
                     <div class="col-2 from-style">
                         <span class="text-gray">From</span>
-                        <h3>{{schemeDeatils.schemeAmountStart | slice:0:-5}}L to
+                        <h3>
+                            <span
+                                *ngIf="schemeDeatils.schemeAmountStart.length < 6">{{schemeDeatils.schemeAmountStart | slice:0:-3}}K</span>
+                            <span
+                                *ngIf="schemeDeatils.schemeAmountStart.length >= 6">{{schemeDeatils.schemeAmountStart | slice:0:-5}}L</span>
+                            to
                             {{schemeDeatils.schemeAmountEnd | slice:0:-5}}L</h3>
                     </div>
                     <div class="col-10 border-radius">
