--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -365,6 +365,7 @@ mat-header-row{
 
 .img-container {
 	height: 150px;
+	min-width: 230px;
 	max-width: 250px;
 	background-color: #f2f3f7;
 	border-radius: 15px;
@@ -372,14 +373,22 @@ mat-header-row{
 	align-items: center;
 	justify-content: center;
 	overflow: hidden;
+	position: relative;
 
 	.fetched-image {
 		width: 100%;
 		height: 100%;
+		border-radius: 15px;
 	}
 
 	.placeholder-image {
 		width: 66px;
+	}
+
+	.remove-icon {
+		position: absolute;
+		top: 10px;
+		right: 10px;
 	}
 }
 
