--- a/gold-admin-frontend/src/app/views/pages/user-management/internal-user/internal-user-list/internal-user-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/internal-user/internal-user-list/internal-user-list.component.html
@@ -4,45 +4,58 @@
         <!-- MATERIAL TABLE | Binded to datasources -->
         <!-- See off.documentations 'https://material.angular.io/components/table/overview' -->
         <div class="mat-table__wrapper" [ngStyle]="{'overflow-x':'hidden'}">
-            <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" >
-               
-                <ng-container matColumnDef="city">
-                    <mat-header-cell *matHeaderCellDef >City</mat-header-cell>
-                    <mat-cell *matCellDef="let broker">
-                        <div class="text-color" (click)="permissions(broker)">
-                            {{broker.name}}
-                        </div>
-                    </mat-cell>
-                </ng-container>
+            <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource">
 
-                <ng-container matColumnDef="pincode">
-                    <mat-header-cell *matHeaderCellDef >PinCode</mat-header-cell>
-                    <mat-cell *matCellDef="let broker">{{broker.calories}}</mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="approvalStatus">
-                    <mat-header-cell *matHeaderCellDef >Approval Status</mat-header-cell>
-                    <mat-cell *matCellDef="let broker">
-                        <div [ngClass]="broker.id == 1 ? 'text-success' :broker.id == 2 ? 'text-warning' : 'text-danger'">
-                            {{broker.carbs}}
+                <ng-container matColumnDef="userId">
+                    <mat-header-cell *matHeaderCellDef>User ID</mat-header-cell>
+                    <mat-cell *matCellDef="let user">
+                        <div class="text-color">
+                            {{user.name}}
                         </div>
                     </mat-cell>
                 </ng-container>
-                <ng-container matColumnDef="status">
-                    <mat-header-cell *matHeaderCellDef >Status</mat-header-cell>
-                    <mat-cell *matCellDef="let broker">
-                        <mat-slide-toggle [color]="'accent'">
-                        </mat-slide-toggle>
+                <ng-container matColumnDef="userName">
+                    <mat-header-cell *matHeaderCellDef>User Name</mat-header-cell>
+                    <mat-cell *matCellDef="let user">
+                        <div class="text-color">
+                            {{user.firstName | titlecase}}
+                            {{user.lastName | titlecase}}
+                        </div>
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="email">
+                    <mat-header-cell *matHeaderCellDef>Email ID</mat-header-cell>
+                    <mat-cell *matCellDef="let user">
+                        <div class="text-color">
+                            {{user.email}}
+                        </div>
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="mobileNumber">
+                    <mat-header-cell *matHeaderCellDef>Mobile No.</mat-header-cell>
+                    <mat-cell *matCellDef="let user">
+                        <div class="text-color">
+                            {{user.mobileNumber}}
+                        </div>
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="branchName">
+                    <mat-header-cell *matHeaderCellDef>Branch Name</mat-header-cell>
+                    <mat-cell *matCellDef="let user">
+                        <div class="text-color">
+                            {{user.name}}
+                        </div>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="action">
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
-                    <mat-cell *matCellDef="let broker">
+                    <mat-cell *matCellDef="let user">
                         <div [ngStyle]="{'display': 'inherit'}">
-                            <div (click)="editBroker(broker,'view')" class="kt-pointer"> View
+                            <div (click)="editUser(user,'edit')" class="kt-pointer"> Edit
                                 |
                                 &nbsp;
                             </div>
-                            <div (click)="editBroker(broker,'edit')" class="kt-pointer"> Edit
+                            <div (click)="deleteUser(user)" class="kt-pointer text-danger"> Delete
 
                             </div>
                         </div>
@@ -62,7 +75,7 @@
         <!-- start: BOTTOM -->
         <div class="mat-table__bottom">
             <mat-spinner [diameter]="20" *ngIf="dataSource.loading$ | async"></mat-spinner>
-            
+
             <mat-paginator [pageSize]="25" [pageSizeOptions]="[10,25,50,100]"
                 [length]="dataSource.paginatorTotal$ | async" [showFirstLastButtons]="true"></mat-paginator>
         </div>
