--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-review/user-review.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-review/user-review.component.html
@@ -16,6 +16,7 @@
                 <div class="col-6">
                     <div class="row">
                         <div class="offset-1 col-3 form-label">
+                            {{data | json}}
                             <div class="profile-div">
                                 <!-- <img class="" src="../../../../../../assets/media/icons/user.png" alt="" /> -->
                                 <img *ngIf="data" class="profile-pic"
@@ -44,7 +45,7 @@
                             <!-- <div class="row"> -->
                             <!-- <div class="col"> -->
                             <input type="text" class="form-control" placeholder="Full Name" formControlName="firstName"
-                                value="{{this.data.customerKycReview.firstName | titlecase}} &nbsp;&nbsp;{{this.data.customerKycReview.lastName | titlecase}}" />
+                                value="{{data.customerKycReview.firstName | titlecase}} &nbsp;&nbsp;{{data.customerKycReview.lastName | titlecase}}" />
 
                             <!-- </div> -->
                             <!-- <div class="col">
@@ -74,7 +75,7 @@
                                 <div class="col-8">
                                     <input type="text" class="form-control" placeholder="Mobile Number"
                                         formControlName="mobileNumber"
-                                        value="{{ this.data.customerKycReview.mobileNumber | titlecase }}" />
+                                        value="{{ data.customerKycReview.mobileNumber | titlecase }}" />
                                     <!-- <mat-error
                                             *ngIf="controls.alternateMobileNumber.errors?.required && controls.alternateMobileNumber.touched">
                                             Required field
@@ -98,7 +99,7 @@
                                 <div class="col-8">
                                     <input type="text" class="form-control" placeholder="PAN"
                                         formControlName="panCardNumber"
-                                        value="{{ this.data.customerKycReview.panCardNumber | uppercase }}" />
+                                        value="{{ data.customerKycReview.panCardNumber | uppercase }}" />
 
                                 </div>
                                 <div class="col pl-0">
@@ -384,10 +385,7 @@
                                 <input type="text" class="form-control" placeholder="" value="Other" />
                             </ng-container>
 
-                            <!-- <mat-error
-                                *ngIf="controls.alternateMobileNumber.errors?.required && controls.alternateMobileNumber.touched">
-                                Required field
-                            </mat-error> -->
+
                         </div>
                     </div>
                 </div>
@@ -402,10 +400,7 @@
                         <div class="col-7">
                             <input type="text" class="form-control" placeholder="Mobile Number"
                                 formControlName="alternateMobileNumber" />
-                            <!-- <mat-error
-                            *ngIf="controls.alternateMobileNumber.errors?.required && controls.alternateMobileNumber.touched">
-                            Required field
-                        </mat-error> -->
+
                         </div>
                     </div>
                 </div>
@@ -426,10 +421,7 @@
                                 <input type="text" class="form-control" placeholder="" value="Divorced" />
                             </ng-container>
 
-                            <!-- <mat-error
-                                *ngIf="controls.alternateMobileNumber.errors?.required && controls.alternateMobileNumber.touched">
-                                Required field
-                            </mat-error> -->
+
                         </div>
                     </div>
                 </div>
@@ -444,10 +436,7 @@
                         <div class="col-7">
                             <input type="text" class="form-control" placeholder="" formControlName="occupationId"
                                 value="{{ data.customerKycReview.customerKyc.occupation.name }}" />
-                            <!-- <mat-error
-                                *ngIf="controls.alternateMobileNumber.errors?.required && controls.alternateMobileNumber.touched">
-                                Required field
-                            </mat-error> -->
+
                         </div>
                     </div>
                 </div>
@@ -460,10 +449,7 @@
                         <div class="col-7">
                             <input type="text" class="form-control" placeholder="" formControlName="spouseName"
                                 value="{{ data.customerKycReview.customerKyc.spouseName | titlecase }}" />
-                            <!-- <mat-error
-                                    *ngIf="controls.alternateMobileNumber.errors?.required && controls.alternateMobileNumber.touched">
-                                    Required field
-                                </mat-error> -->
+
                         </div>
                     </div>
                 </div>
