--- a/gold-admin-frontend/src/app/views/pages/loan-settings/loan-scheme/loan-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-settings/loan-scheme/loan-scheme.component.html
@@ -16,12 +16,11 @@
                     <div class="col-2 from-style">
                         <span class="text-gray">From</span>
                         <h3>
-                            <span
-                                *ngIf="schemeDeatils.schemeAmountStart.length < 6">{{schemeDeatils.schemeAmountStart | slice:0:-3}}K</span>
-                            <span
-                                *ngIf="schemeDeatils.schemeAmountStart.length >= 6">{{schemeDeatils.schemeAmountStart | slice:0:-5}}L</span>
+                            {{schemeDeatils.schemeAmountStart | schemeAmount }}
+                            <!-- <span
+                                *ngIf="schemeDeatils.schemeAmountStart.length >= 6">{{schemeDeatils.schemeAmountStart | schemeAmount</span> -->
                             to
-                            {{schemeDeatils.schemeAmountEnd | slice:0:-5}}L</h3>
+                            {{schemeDeatils.schemeAmountEnd | schemeAmount}}</h3>
                     </div>
                     <div class="col-10 border-radius">
                         <div class="row border-bottom">
