loan apllication form

--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/loan-calculator.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/loan-calculator.component.html
@@ -9,7 +9,7 @@
                                 <span class="tab-text">Rough Loan Amount</span>
                             </ng-template>
                             <div>
-                                table 1
+                                <kt-rough-loan-amount></kt-rough-loan-amount>
                             </div>
                         </mat-tab>
                         <mat-tab>
@@ -18,7 +18,7 @@
                                 <span class="tab-text">Final Loan Amount</span>
                             </ng-template>
                             <div>
-                                table 2
+                                <kt-final-loan-amount></kt-final-loan-amount>
                             </div>
                         </mat-tab>
                         <mat-tab>
