bhushan: toastr time, change pass UI change

--- a/gold-admin-frontend/src/app/views/pages/admin-account/change-password/change-password.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin-account/change-password/change-password.component.html
@@ -1,57 +1,77 @@
 <ng-container>
-    <div class="row justify-content-center">
-        <div class="col-4">
-            <kt-portlet>
-                <kt-portlet-header [title]="'Change Password'" [class]="'kt-portlet__head--lg'">
 
-                </kt-portlet-header>
-                <kt-portlet-body>
-                    <form autocomplete="off" class="kt-form" [formGroup]="passwordForm" #form="ngForm" (submit)="submitForm()">
-                        <mat-form-field class="w-100">
-                            <mat-label>Old Password</mat-label>
-                            <input matInput placeholder="Old Password" type="password" formControlName="oldPassword" autocomplete="off">
-                            <mat-error *ngIf="isControlHasError('oldPassword','required')">
-                                <strong>Enter Old Password</strong>
-                            </mat-error>
-                        </mat-form-field>
-                        <mat-form-field class="w-100">
-                            <mat-label>New Password</mat-label>
-                            <input matInput placeholder="Old Password" type="password" formControlName="newPassword"  autocomplete="off">
-                            <mat-error *ngIf="isControlHasError('newPassword','required')">
-                                <strong>Enter New Password</strong>
-                            </mat-error>
-                            <mat-error *ngIf="isControlHasError('newPassword','minlength')">
-                                <strong>{{ 'AUTH.VALIDATION.MIN_LENGTH_FIELD' | translate }} 8</strong>
-                            </mat-error>
-                            <mat-error *ngIf="isControlHasError('newPassword','maxlength')">
-                                <strong>{{ 'AUTH.VALIDATION.MAX_LENGTH_FIELD' | translate }} 100</strong>
-                            </mat-error>
-                        </mat-form-field>
-                        <mat-form-field class="w-100">
-                            <mat-label>Confirm Password</mat-label>
-                            <input matInput placeholder="Old Password" type="password"
-                                formControlName="confirmPassword"  autocomplete="off">
+    <kt-portlet>
+
+        <kt-portlet-body>
+            <div class="row justify-content-center parent-div">
+                <div class="col-5">
+                    <form autocomplete="off" class="kt-form" [formGroup]="passwordForm" #form="ngForm"
+                        (submit)="submitForm()">
+                        <!-- <mat-form-field class="w-100"> -->
+                        <div class="row kt-margin-b-20">
+                            <div class="col-5 form-label kt-padding-l-10">
+                                <label class="mandatory">Old Password</label>
+                            </div>
+                            <div class="col-7">
+                                <input class="form-control" placeholder="Old Password" type="password"
+                                    formControlName="oldPassword" autocomplete="off">
+                                <mat-error *ngIf="isControlHasError('oldPassword','required')">
+                                    <span>Enter Old Password</span>
+                                </mat-error>
+                            </div>
+                        </div>
+
+                        <div class="row kt-margin-b-20">
+                            <div class="col-5 form-label kt-padding-l-10">
+                                <label class="mandatory">New Password</label>
+                            </div>
+                            <div class="col-7">
+                                <input class="form-control" placeholder="New Password" type="password"
+                                    formControlName="newPassword" autocomplete="off">
+                                <mat-error *ngIf="isControlHasError('newPassword','required')">
+                                    <span>Enter New Password</span>
+                                </mat-error>
+                                <mat-error *ngIf="isControlHasError('newPassword','minlength')">
+                                    <span>{{ 'AUTH.VALIDATION.MIN_LENGTH_FIELD' | translate }} 8</span>
+                                </mat-error>
+                                <mat-error *ngIf="isControlHasError('newPassword','maxlength')">
+                                    <span>{{ 'AUTH.VALIDATION.MAX_LENGTH_FIELD' | translate }} 100</span>
+                                </mat-error>
+                            </div>
+                        </div>
+
+                        <div class="row kt-margin-b-20">
+                            <div class="col-5 form-label kt-padding-l-10">
+                                <label class="mandatory">Confirm Password</label>
+                            </div>
+                            <div class="col-7">
+                                <input class="form-control" placeholder="Confirm Password" type="password"
+                                    formControlName="confirmPassword" autocomplete="off">
                                 <mat-error *ngIf="isControlHasError('confirmPassword','required')">
-                                        <strong>Enter Confirm Password</strong>
-                                    </mat-error>
-                                    <mat-error *ngIf="isControlHasError('confirmPassword','minlength')">
-                                        <strong>{{ 'AUTH.VALIDATION.MIN_LENGTH_FIELD' | translate }} 8</strong>
-                                    </mat-error>
-                                    <mat-error *ngIf="isControlHasError('confirmPassword','maxlength')">
-                                        <strong>{{ 'AUTH.VALIDATION.MAX_LENGTH_FIELD' | translate }} 100</strong>
-                                    </mat-error>
-                                    <mat-error *ngIf="passwordForm.get('confirmPassword').errors && passwordForm.get('confirmPassword').errors.ConfirmPassword">
-                                        <strong>Passsword and ConfirmPassword didn't match.</strong>
-                                    </mat-error>
-                        </mat-form-field>
-                        <div class="kt-margin-t-15">
+                                    <span>Enter Confirm Password</span>
+                                </mat-error>
+                                <mat-error *ngIf="isControlHasError('confirmPassword','minlength')">
+                                    <span>{{ 'AUTH.VALIDATION.MIN_LENGTH_FIELD' | translate }} 8</span>
+                                </mat-error>
+                                <mat-error *ngIf="isControlHasError('confirmPassword','maxlength')">
+                                    <span>{{ 'AUTH.VALIDATION.MAX_LENGTH_FIELD' | translate }} 100</span>
+                                </mat-error>
+                                <mat-error
+                                    *ngIf="passwordForm.get('confirmPassword').errors && passwordForm.get('confirmPassword').errors.ConfirmPassword">
+                                    <span>New Passsword and Confirm Password didn't match.</span>
+                                </mat-error>
+                            </div>
+                        </div>
+
+                        <div class="kt-margin-t-30">
                             <kt-button [type]="'submit'" [value]="'Submit'" class="kt-margin-r-10"></kt-button>
                             <kt-button [type]="'reset'" [value]="'Reset'"></kt-button>
                         </div>
                     </form>
-                </kt-portlet-body>
-            </kt-portlet>
+                </div>
+            </div>
+        </kt-portlet-body>
+    </kt-portlet>
 
-        </div>
-    </div>
+
 </ng-container>
