--- a/gold-admin-frontend/src/app/views/pages/emi-management/product/category/category.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/product/category/category.component.html
@@ -1,1 +1,46 @@
-<p>category works!</p>
+<kt-portlet class="mt-5 mt-lg-0">
+    <kt-portlet-header [class]="'kt-portlet__head--lg'">
+        <ng-container ktPortletTitle>
+            <h3 class="ComponentTitle">
+                <span>Category List</span>
+            </h3>
+        </ng-container>
+        <ng-container ktPortletTools>
+            <mat-form-field class="mat-form-field-fluid searchbar example-form-field">
+                <input matInput placeholder="Search Category" #searchInput autocomplete="off">
+            </mat-form-field>&nbsp;&nbsp;
+            <button *ngIf="permission.includes('add category')" class="btn primary_button" (click)="addCategory();">Add New</button> &nbsp; &nbsp; &nbsp; &nbsp;
+        </ng-container>
+    </kt-portlet-header>
+    <kt-portlet-body class="kt-padding-t-5 kt-padding-b-5 kt-padding-l-10 kt-padding-r-10 componrntBody">
+        <div class="mat-table__wrapper">
+            <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort" matSortActive="id" matSortDirection="asc" matSortDisableClear>
+                <ng-container matColumnDef="categoryName">
+                    <mat-header-cell *matHeaderCellDef>Category Name
+                    </mat-header-cell>
+                    <mat-cell *matCellDef="let element">{{element.categoryName | truncate :[30,'...'] | titlecase}}</mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="action">
+                    <mat-header-cell *matHeaderCellDef>Action
+                    </mat-header-cell>
+                    <mat-cell *matCellDef="let element ">
+                        <button *ngIf="permission.includes('edit category')" (click)="editCategory(element.id)" mat-icon-button aria-label="Example icon-button with a edit icon" class="edit_icon">
+                        <mat-icon>edit</mat-icon>
+                        </button>
+                        <button *ngIf="permission.includes('delete category')" (click)="deleteCategory(element.id ,element.categoryName)" mat-icon-button color="primary" aria-label="Example icon-button with a delete icon" class="delete_icon">
+                        <mat-icon>delete</mat-icon>
+                        </button>
+                    </mat-cell>
+                </ng-container>
+                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+            </mat-table>
+            <div class="mat-table__message" *ngIf="noRecords">No records found</div>
+            <div class="mat-table__message" *ngIf="dataSource.isPreloadTextViewed$ | async">Please wait....</div>
+        </div>
+        <div class="mat-table__bottom">
+            <mat-spinner [diameter]="20" *ngIf="dataSource.loading$ | async"></mat-spinner>
+            <mat-paginator [pageSize]="50" [pageSizeOptions]="[25,50,100,200,500]" [length]="dataSource.paginatorTotal$ | async" [showFirstLastButtons]="true"></mat-paginator>
+        </div>
+    </kt-portlet-body>
+</kt-portlet>
