bhushan: final loan, interest amt, change in reviw

--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-banks/user-banks.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-banks/user-banks.component.html
@@ -146,7 +146,7 @@
                                     </div>
 
                                     <div *ngIf="passBookImage.length > 0" class="">
-                                        <div class="d-inline-block img-container kt-margin-right-15"
+                                        <div class="d-inline-block img-container kt-margin-r-15"
                                             *ngFor="let proof of passBookImage; index as i;">
                                             <img class="fetched-image" *ngIf="passBookImage" [src]="proof">
                                         </div>
