--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/loan-calculator.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/loan-calculator.component.scss
@@ -2,11 +2,11 @@
     ::ng-deep.mat-tab-label .mat-tab-label-content {
         flex-wrap: wrap!important;
       }
-      ::ng-deep.mat-tab-label{
-        justify-content: left !important;
-        padding-left: 0px !important;
+    //   ::ng-deep.mat-tab-label{
+    //     // justify-content: left !important;
+    //     padding-left: 0px !important;
  
-    }
+    // }
       
       ::ng-deep.mat-tab-label .mat-tab-label-content span{
         display: flex!important;
@@ -17,4 +17,6 @@
       ::ng-deep.mat-ink-bar{
         width: 180px !important;
       }
+
+    
 }
