--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/rough-loan-amount/rough-loan-amount.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/rough-loan-amount/rough-loan-amount.component.html
@@ -1,13 +1,14 @@
 <div class="container minHeight">
     <form action="" [formGroup]="roughLoanForm">
         <div class="row justify-content-start">
-            <div class="col-12 align-self-center">
+            <div class="offset-1 col-8 align-self-center">
                 <div class="row  kt-margin-t-30">
                     <div class="col-4 form-label">
                         <label for="" class="text-color">Gold Gross Weight</label>
                     </div>
                     <div class="col-6">
-                        <input type="number" class="form-control" formControlName="grossWeight" placeholder="10.50 grams">
+                        <input type="number" class="form-control" formControlName="grossWeight"
+                            placeholder="10.50 grams">
                     </div>
                 </div>
                 <div class="row kt-margin-t-10">
@@ -16,7 +17,7 @@
                     </div>
                     <div class="col-6">
                         <input type="number" class="form-control" formControlName="netWeight" placeholder="8.50 grams"
-                        [class.isError]="controls.netWeight.touched && controls.netWeight.invalid">
+                            [class.isError]="controls.netWeight.touched && controls.netWeight.invalid">
                     </div>
                 </div>
                 <div class="row kt-margin-t-10">
@@ -25,12 +26,12 @@
                     </div>
                     <div class="col-6">
                         <input type="number" class="form-control" formControlName="currentLTV" placeholder="45000"
-                         [class.isError]="controls.currentLTV.touched && controls.currentLTV.invalid">
+                            [class.isError]="controls.currentLTV.touched && controls.currentLTV.invalid">
                     </div>
                 </div>
                 <div class="row kt-margin-t-10">
                     <div class="offset-4 col-6">
-                       <kt-button [value]="'Calculate'" [type]="'button'" (click)="calculate()"></kt-button>
+                        <kt-button [value]="'Calculate'" [type]="'button'" (click)="calculate()"></kt-button>
                     </div>
                 </div>
             </div>
@@ -38,9 +39,8 @@
     </form>
     <div class="row kt-margin-t-20">
         <div class="offset-4 col-6">
-           <p class="text-gray font-weight-500 m-0">Total Amount</p>
-           <h3 class="text-color">{{loanAmount | currency :'INR'}}</h3>
+            <p class="text-gray font-weight-500 m-0">Total Amount</p>
+            <h3 class="text-color">{{loanAmount | currency :'INR'}}</h3>
         </div>
     </div>
 </div>
-   
