--- a/gold-admin-frontend/src/app/views/pages/emi-management/config-details/wallet-price/wallet-price-add/wallet-price-add.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/config-details/wallet-price/wallet-price-add/wallet-price-add.component.html
@@ -20,7 +20,7 @@
                     <div class="col-lg-12 kt-margin-bottom-20-mobile">
                         <div class="row">
                             <div class="col-5">
-                                <label [class.mandatory]="isMandatory">Wallet Gold Price(1 grms)</label>
+                                <label [class.mandatory]="isMandatory">Wallet Gold Price(1 gm)</label>
                             </div>
                             <div class="col-7">
                                 <input class="form-control" formControlName="walletGoldPrice" type="number"
@@ -34,7 +34,7 @@
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-5">
-                                <label [class.mandatory]="isMandatory">Wallet Silver Price(1 grms)</label>
+                                <label [class.mandatory]="isMandatory">Wallet Silver Price(1 gm)</label>
                             </div>
                             <div class="col-7">
                                 <input class="form-control" formControlName="walletSilverPrice" type="number"
